; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_rfc1867.c_php_rfc1867_register_constants.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_rfc1867.c_php_rfc1867_register_constants.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"UPLOAD_ERR_OK\00", align 1
@UPLOAD_ERROR_OK = common dso_local global i32 0, align 4
@CONST_CS = common dso_local global i32 0, align 4
@CONST_PERSISTENT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"UPLOAD_ERR_INI_SIZE\00", align 1
@UPLOAD_ERROR_A = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [21 x i8] c"UPLOAD_ERR_FORM_SIZE\00", align 1
@UPLOAD_ERROR_B = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [19 x i8] c"UPLOAD_ERR_PARTIAL\00", align 1
@UPLOAD_ERROR_C = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [19 x i8] c"UPLOAD_ERR_NO_FILE\00", align 1
@UPLOAD_ERROR_D = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [22 x i8] c"UPLOAD_ERR_NO_TMP_DIR\00", align 1
@UPLOAD_ERROR_E = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [22 x i8] c"UPLOAD_ERR_CANT_WRITE\00", align 1
@UPLOAD_ERROR_F = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [21 x i8] c"UPLOAD_ERR_EXTENSION\00", align 1
@UPLOAD_ERROR_X = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @php_rfc1867_register_constants() #0 {
  %1 = load i32, i32* @UPLOAD_ERROR_OK, align 4
  %2 = load i32, i32* @CONST_CS, align 4
  %3 = load i32, i32* @CONST_PERSISTENT, align 4
  %4 = or i32 %2, %3
  %5 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %1, i32 %4)
  %6 = load i32, i32* @UPLOAD_ERROR_A, align 4
  %7 = load i32, i32* @CONST_CS, align 4
  %8 = load i32, i32* @CONST_PERSISTENT, align 4
  %9 = or i32 %7, %8
  %10 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i32 %6, i32 %9)
  %11 = load i32, i32* @UPLOAD_ERROR_B, align 4
  %12 = load i32, i32* @CONST_CS, align 4
  %13 = load i32, i32* @CONST_PERSISTENT, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i32 %11, i32 %14)
  %16 = load i32, i32* @UPLOAD_ERROR_C, align 4
  %17 = load i32, i32* @CONST_CS, align 4
  %18 = load i32, i32* @CONST_PERSISTENT, align 4
  %19 = or i32 %17, %18
  %20 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0), i32 %16, i32 %19)
  %21 = load i32, i32* @UPLOAD_ERROR_D, align 4
  %22 = load i32, i32* @CONST_CS, align 4
  %23 = load i32, i32* @CONST_PERSISTENT, align 4
  %24 = or i32 %22, %23
  %25 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i32 %21, i32 %24)
  %26 = load i32, i32* @UPLOAD_ERROR_E, align 4
  %27 = load i32, i32* @CONST_CS, align 4
  %28 = load i32, i32* @CONST_PERSISTENT, align 4
  %29 = or i32 %27, %28
  %30 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0), i32 %26, i32 %29)
  %31 = load i32, i32* @UPLOAD_ERROR_F, align 4
  %32 = load i32, i32* @CONST_CS, align 4
  %33 = load i32, i32* @CONST_PERSISTENT, align 4
  %34 = or i32 %32, %33
  %35 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.6, i64 0, i64 0), i32 %31, i32 %34)
  %36 = load i32, i32* @UPLOAD_ERROR_X, align 4
  %37 = load i32, i32* @CONST_CS, align 4
  %38 = load i32, i32* @CONST_PERSISTENT, align 4
  %39 = or i32 %37, %38
  %40 = call i32 @REGISTER_MAIN_LONG_CONSTANT(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.7, i64 0, i64 0), i32 %36, i32 %39)
  ret void
}

declare dso_local i32 @REGISTER_MAIN_LONG_CONSTANT(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
